fix: restore Java 8 dependency and test compatibility